2012-08-31 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-17
	* fix a bug with integer division instead of FP

2012-08-28 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-16
	* correct normalization for projected CPU usage
	* correct weight factor for C6220 with 16 slave EP's
	* removed histograms for BUFUs with 22 slave EP's
	* histogram for busy from /proc/stat
	* two tables with uncorrected CPU usage
	* update runNumber in title before writing files
	* save also time-based root files for DQM archiving

2012-08-21 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-15
	* dqm output files writable by default
	  (so that archiving script can delete them after it is done)

2012-08-21 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-14
	* fix deleting dequeues
	* make a copy of module statistics before applying sort
	* destroying Streams histograms on Stop

2012-08-20 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-13
	* catching all kinds of exception in postEntry(iChoke)
	* implement output (stream) rates

2012-07-20 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-12
	* bugfixes
	* use time form last update instead of fixed 23 sec interval

2012-07-13 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-11
	* dqmEnabled --> false by default
	* fixed rolling plots bug
	* check if collector port is a number
	* fixed filling wrong row in module time spent histograms
	* refill whole row when new item added in module time
	* lsStat and lsCommonStat list is now allocated on heap (avoids extra copy)
	* refilling past 4 lumisections on report with new lumi received
	* reporting modules taking a lot of time (warning) with log4cplus

2012-07-10 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-10
	* rate plots per machine
	* remove EventInfo for now (only Everything / Layouts will have DAQ)

2012-07-06 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-09
	* fix rolling stat histograms
	* no event time graph for first 2 lumis